Stage1 updates, removed stage2 old file, added stage2-3 combined, added stage4 script

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Python environment
 venv/
+.env
 
 # Python cache
 __pycache__/
@@ -8,11 +9,12 @@ __pycache__/
 
 # Logs
 *.log
+logs
 
 # OS files
 .DS_Store
 Thumbs.db
 
 # Dataset and Delta Lake outputs
-deltalake/bodies/
+deltalake
 maildir/
